--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -6,10 +6,10 @@ on: [push, workflow_dispatch]
 #Environment variables https://docs.github.com/en/actions/learn-github-actions/environment-variables
 env:
   RESOURCE-GROUP: rg-az400-eshoponweb-dsayom
-  LOCATION: westeurope
+  LOCATION: eastus
   TEMPLATE-FILE: .azure/bicep/webapp.bicep
   SUBSCRIPTION-ID: 6a15e0d0-5384-452b-9952-5f461f560517
-  WEBAPP-NAME: az400-webapp-dsayom
+  WEBAPP-NAME: az400-webapp-dsayom01
   
 jobs:
   #Build, test and publish .net web project in repository
